Bug 162528 - Converting to PNG will fail if invalid JSON is passed as filter data
Summary: Converting to PNG will fail if invalid JSON is passed as filter data
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.2.0 target:24.8.1
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-20 09:56 UTC by Mike Kaganski
Modified: 2024-08-21 10:29 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2024-08-20 09:56:04 UTC
Run a command line like this:

> soffice --convert-to png:impress_png_Export:foobar path/to/file.svg

The ":foobar" is a "filter parameters" string; the graphic filters expect valid JSON here, and crash / fail, when its parsing throws.

Similar to bug 150846.
Comment 1 Mike Kaganski 2024-08-20 10:04:05 UTC
https://gerrit.libreoffice.org/c/core/+/172105
Comment 2 Commit Notification 2024-08-20 14:22:18 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/20b16048236598880dc94bac146079426ae8f309

tdf#162528: handle exceptions from JSON parser in GraphicExporter

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-08-21 10:29:03 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/ed99f19b819dd057cc6f4411639d8b4f9a9d4578

tdf#162528: handle exceptions from JSON parser in GraphicExporter

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.