tdf#162528: handle exceptions from JSON parser in GraphicExporter

Similar to commit 218695f947dfecaa92209adf0c5572b99f0c021f "tdf#150846:
FilterOptions in descriptor could come from import filter", 2022-09-21

Change-Id: I3123bb2c136d1bc5545d0412eb1db5e5fd9c91b6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172105
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>